Fixing a layout issue with floating flashbags
original bzr status:
revno: 68
committer: Steve DODIER-LAZARO <sdodierl@secdev.cs.ucl.ac.uk>
branch nick: multitasking
timestamp: Fri 2015-03-27 17:41:09 +0000

--- a/src/UCL/StudyBundle/Resources/public/css/layout.css
+++ b/src/UCL/StudyBundle/Resources/public/css/layout.css
@@ -341,14 +341,14 @@ main {
   font-weight: bold;
   position: relative;
   padding: .5em 2em .5em 1em;
-  min-height: 3em;
+  min-height: 4em;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
   vertical-align: middle;
 }
 
-.flashbag, .fa {
+.flashbag .fa {
   box-sizing: content-box !important;
 }
 
